# PDAL

./: .gitattributes  .gitignore  CITATION.cff  NOTICE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: code-checks.yml
LP/CP_AL/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  make_full856_manifest.py  pyproject.toml  run_miplib_group.sbatch  run_unified_full856.sbatch
LP/CP_AL/.github/workflows/: check-clang-format.yml  spelling.yml
LP/CP_AL/docs/: C_API.md
LP/CP_AL/include/: cp_al.h  cp_al_types.h  mps_parser.h
LP/CP_AL/internal/: internal_types.h  preconditioner.h  presolve.h  solver.h  utils.h
LP/CP_AL/python/: README.md
LP/CP_AL/python/cp_al/: CPAL.py  __init__.py  _core.py  model.py
LP/CP_AL/python_bindings/: CMakeLists.txt  _core_bindings.cpp
LP/CP_AL/src/: cli.c  cp_al.c  mps_parser.c  preconditioner.cu  presolve.c  solver.cu  utils.cu
LP/CP_AL/test/: test_feature_policy_source.py  test_manifest_builder.py  test_structural_tail_cut_source.py
QP/FA_CP/: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  run_table1_134.sbatch  smoke_qafiro.lst
QP/FA_CP/docs/: C_API.md
QP/FA_CP/include/: fa_cp.h  fa_cp_types.h  mps_parser.h
QP/FA_CP/internal/: fa_cp_core_op.h  internal_types.h  permute.h  preconditioner.h  solver.h  solver_state.h  utils.h
QP/FA_CP/python/: README.md
QP/FA_CP/python/fa_cp/: FA_CP.py  __init__.py  _core.py  model.py
QP/FA_CP/python_bindings/: CMakeLists.txt  _core_bindings.cpp
QP/FA_CP/scripts/: run_qp_table1_134.sbatch  run_qp_table1_134_array.sbatch  submit_table1_134_validation.sh
QP/FA_CP/src/: cli.c  fa_cp.c  fa_cp_core_op.cu  mps_parser.c  permute.cu  preconditioner.c  solver.cu  solver_state.cu  utils.cu
QP/LIN_CP_AL/: CMakeLists.txt  NOTICE  README.md  run_table1_134.sbatch
QP/LIN_CP_AL/include/: cp_al.h  cp_al_types.h  mps_parser.h
QP/LIN_CP_AL/internal/: cp_al_core_op.h  internal_types.h  permute.h  preconditioner.h  solver.h  solver_state.h  utils.h
QP/LIN_CP_AL/scripts/: run_qp_table1_134.sbatch
QP/LIN_CP_AL/src/: cli.c  cp_al.c  cp_al_core_op.cu  mps_parser.c  permute.cu  preconditioner.c  solver.cu  solver_state.cu  utils.cu
QP/PLANTED_CP_AL/: CMakeLists.txt  NOTICE  README.md
QP/PLANTED_CP_AL/include/: cp_al.h  cp_al_types.h  mps_parser.h
QP/PLANTED_CP_AL/internal/: cp_al_core_op.h  internal_types.h  permute.h  preconditioner.h  solver.h  solver_state.h  utils.h
QP/PLANTED_CP_AL/src/: cli.c  cp_al.c  cp_al_core_op.cu  mps_parser.c  permute.cu  preconditioner.c  solver.cu  solver_state.cu  utils.cu
QP/PLANTED_FA_CP/: CMakeLists.txt  LICENSE  NOTICE  README.md
QP/PLANTED_FA_CP/include/: fa_cp.h  fa_cp_types.h  mps_parser.h
QP/PLANTED_FA_CP/internal/: fa_cp_core_op.h  internal_types.h  permute.h  preconditioner.h  solver.h  solver_state.h  utils.h
QP/PLANTED_FA_CP/src/: cli.c  fa_cp.c  fa_cp_core_op.cu  mps_parser.c  permute.cu  preconditioner.c  solver.cu  solver_state.cu  utils.cu
experiments/: README.md
experiments/lp_benchmarks/: README.md  collect_lp_tables.py  make_cell_manifests.py  parse_outputs.py  run_baseline_group.sbatch  run_cupdlp_jl_cli.jl  run_hprlp_one.jl  submit_lp_baselines.sh
experiments/modal_sigma/: README.md  requirements.txt  run_modal_sigma_controlled.py  run_modal_sigma_epoch.py
experiments/qp_linearized/: README.md  collect_qp_linearized.py  generate_synthetic_eqbox_qp_unified.py  generate_synthetic_eqbox_qp_v2.py  generate_synthetic_eqbox_qp_v2b.py  profiles.psv  run_profile_chunk.sh  run_qp_linearized.sbatch
experiments/qp_maros/: README.md  collect_qp_maros.py
experiments/random_lp/: README.md  build_random_lp_suite.py  collect_random_lp.py  generate_pure_equality_lp.py  make_suite_manifest.py  run_random_lp.sbatch
tests/: test_lp_baseline_parsers.py  test_lp_table_aggregation.py  test_public_repository_policy.py  test_qp_linearized_aggregation.py  test_qp_map_disclosure.py  test_random_lp_experiment.py
