[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11.0", "numpy", "scipy"]
build-backend = "scikit_build_core.build"

[project]
name = "cp_al"
version = "0.2.5"
description = "Python bindings for CP_AL (GPU-accelerated first-order LP solver)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [
  { name = "Benqi Liu", email = "bqliu@pku.edu.cn" }
]
dependencies = ["numpy>=1.21", "scipy>=1.8"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.20"
cmake.build-type = "Release"
wheel.packages = ["python/cp_al"]
sdist.include = ["test/**", "pyproject.toml", "README.md", "LICENSE", "NOTICE"]

[tool.scikit-build.cmake.define]
CMAKE_CUDA_ARCHITECTURES = "all"
CMAKE_CUDA_STANDARD = "17"
CP_AL_BUILD_PYTHON = "ON"
CP_AL_BUILD_STATIC_LIB = "ON"
CP_AL_BUILD_SHARED_LIB = "OFF"
CP_AL_BUILD_CLI = "OFF"
CP_AL_BUILD_TESTS = "OFF"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=4",
  "numpy",
  "scipy"
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = """
-q
-ra
--strict-markers
--maxfail=1
--cov=cp_al
--cov-report=term-missing
--cov-report=xml
"""
markers = [
  "gpu: requires a CUDA-capable GPU"
]
xfail_strict = true
filterwarnings = [
  "error::FutureWarning",
]

[tool.coverage.run]
branch = true
source = ["cp_al"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
